Adding the text. More work has to be done. For now, this is fine

--- a/Lorenz/Makefile
+++ b/Lorenz/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 
 #flags
 CFLAGS = -oWall
-GLUTFLGS = -lglut -lGL -lGLU -lGLEW -Wno-write-strings
+GLUTFLGS = -lglut -lGL -lGLU -lGLEW -Wno-write-strings -lm
 
 #target
 TARGET = lorenz
