Committing the changed Makefile

--- a/Homework2/Makefile
+++ b/Homework2/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 
 #flags
-CFLAGS =-O3 -Wall
+CFLAGS =-O3 -Wall -w
 GLUTFLGS = -lglut -lGL -lGLU -lm -Wno-write-strings
 
 #target
@@ -9,9 +9,8 @@ TARGET = hw2
 
 all: $(TARGET)
 
-#compile
-$(TARGET): $(TARGET).cpp
-	$(CC) $(CFLAGS) $(TARGET).cpp -o $(TARGET) $(GLUTFLGS)
+$(TARGET): $(TARGET).c
+	$(CC) $(CFLAGS) $(TARGET).c -o $(TARGET) $(GLUTFLGS)
 
 #remove
 clean:
