--- a/Homework3/Makefile
+++ b/Homework3/Makefile
@@ -29,9 +29,11 @@ print.o: print.c CSCI5229.h
 errorMsg.o: errorMsg.c CSCI5229.h
 drawAxes.o: drawAxes.c CSCI5229.h
 drawShapes.o: drawShapes.c CSCI5229.h
+loadtexbmp.o: loadtexbmp.c CSCI5229.h
+fatal.o: fatal.c CSCI5229.h
 
 #  Create archive
-CSCI5229.a:print.o errorMsg.o drawAxes.o drawShapes.o
+CSCI5229.a:print.o errorMsg.o drawAxes.o drawShapes.o loadtexbmp.o fatal.o
 	ar -rcs $@ $^
 
 # Compile rules
