--- a/ProjectFireWorks/makefile
+++ b/ProjectFireWorks/makefile
@@ -33,9 +33,10 @@ fatal.o: fatal.c CSCI5229.h
 errorMsg.o: errorMsg.c CSCI5229.h
 drawAxes.o: drawAxes.c CSCI5229.h
 print.o: print.c CSCI5229.h
+object.o: object.c CSCI5229.h
 
 #  Create archive
-CSCIx229.a:utils.o sphere.o particle.o loadtexbmp.o fatal.o errorMsg.o drawAxes.o print.o
+CSCIx229.a:utils.o sphere.o particle.o loadtexbmp.o fatal.o errorMsg.o drawAxes.o print.o object.o
 	ar -rcs $@ $^
 
 # Compile rules
