Adding the water feature with texture. Made fireworks bigger

--- a/ProjectFireWorks/makefile
+++ b/ProjectFireWorks/makefile
@@ -1,13 +1,13 @@
 # Example 16
-EXE=ex1
+EXE=final
 
 # Main target
 all: $(EXE)
 
 #  MinGW
 ifeq "$(OS)" "Windows_NT"
-CFLG=-O3 -Wall
-LIBS=-lglut32cu -lglu32 -lopengl32
+CFLG=-O3 -Wall -DUSEGLEW
+LIBS=-lglew32 -lglut32cu -lglu32 -lopengl32
 CLEAN=del *.exe *.o *.a
 else
 #  OSX
@@ -17,17 +17,17 @@ LIBS=-framework GLUT -framework OpenGL
 #  Linux/Unix/Solaris
 else
 CFLG=-O3 -Wall -w -std=c++11
-LIBS=-lglut -lGLU -lGL -lm
+LIBS=-lglut -lGL -lGLU -lGLEW -lm
 endif
 #  OSX/Linux/Unix/Solaris
 CLEAN=rm -f $(EXE) *.o *.a
 endif
 
 # Dependencies
-ex1.o: ex1.cpp
-utils.o: utils.cpp ex1.h
-spehere.o: sphere.cpp ex1.h
-particle.o: particle.cpp ex1.h
+final.o: final.cpp
+utils.o: utils.cpp final.h
+spehere.o: sphere.cpp final.h
+particle.o: particle.cpp final.h
 loadtexbmp.o: loadtexbmp.c CSCI5229.h
 fatal.o: fatal.c CSCI5229.h
 errorMsg.o: errorMsg.c CSCI5229.h
@@ -47,7 +47,7 @@ CSCIx229.a:utils.o sphere.o particle.o loadtexbmp.o fatal.o errorMsg.o drawAxes.
 	g++ -c $(CFLG) $<
 
 #  Link
-ex1:ex1.o CSCIx229.a
+final:final.o CSCIx229.a
 	g++ -O3 -o $@ $^   $(LIBS)
 
 #  Clean
